0.2.4.dev (unreleased)
======================

- Force upgrade of informations used during initialization: this is necessary
  to keep these parameters fresh if the Trac project structure already exists.
  [kdeldycke]

- Get the latest Trac 0.11.x but exclude the 0.12.x branch.
  [kdeldycke]

- Document all supported options.
  [kdeldycke]

- Add new options: project-description and footer-message.
  [kdeldycke]

- Reuse the description as alternative text to the logo.
  [kdeldycke]

- Add support for all SMTP parameters.
  [kdeldycke]

- Add support for trac.ini custom parameters.
  [kdeldycke]

- Auto-install Pygments to benefit syntax highlighting.
  [kdeldycke]

- Use pytz to get nice and friendly timezones.
  [kdeldycke]

- Bring docutils to add reStructuredText (rst) support in Trac's wiki.
  [kdeldycke]


0.2.3 (2010-04-24)
==================

- Fixed plugins svn paths.
  [tarek]


0.1.0 (2008-06-16)
==================

- Created recipe with ZopeSkel.
  [tarek]
